--- a/public/login.css
+++ b/public/login.css
@@ -7,12 +7,73 @@ body{
 .main{
     width: 100vw;
     height: 100vh;
-    background-color: #ffebc3;
+    background-color: #F5EFE6;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
 }
+
+.container{
+    width: 40%;
+    height: 70%;
+    background-color: #D2B48C;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.container>h2{
+    font-size: 2.3rem;
+    font-weight: 500;
+    color: #001f3f;
+}
+
+.container>p{
+    font-size: 1rem;
+    font-weight: 400;
+    color: #333;
+    margin-top: -20px;
+}
+
+.container>input{
+    width: 60%;
+    height: 8%;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    padding-left: 10px;
+    font-size: 1rem;
+    background-color: #F5EFE6;
+}
+
+.container>button{
+    width: 40%;
+    height: 8%;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    font-size: 1.1rem;
+    font-weight: 500;
+    background-color: #001f3f;
+    color: #F5EFE6;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.container>button:hover{
+    background-color: #A0522D;
+}
+
+.container>a{
+    font-size: 0.9rem;
+    color: #333;
+    margin-top: 10px;
+}
+
 
 
 .container{
@@ -33,7 +94,7 @@ body{
 }
 
 .inputfield::placeholder{
-    color: #ffebc3;
+    color: #ffc041;
 }
 
 .inputfield{
@@ -43,7 +104,7 @@ body{
     border: none;
     border-bottom: 1px solid #ffebc3;
     font-size: 1.4rem;
-    color: #fff6e3;
+    color: #f1b022;
 }
 
 .inputfield:focus{
@@ -69,3 +130,18 @@ body{
     color: #fdc960;
     cursor: pointer;
 }
+
+
+
+@media (max-width: 768px) {
+  .container {
+    width: 90%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    width: 80%;
+  }
+}
+
